--- a/src/index.css
+++ b/src/index.css
@@ -30,4 +30,20 @@
   .perspective-1000 {
     perspective: 1000px;
   }
+
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    @apply bg-transparent;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    @apply bg-spotify-gray-light/40 rounded-full;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    @apply bg-spotify-green/60;
+  }
 }
